--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ form button {
     background-color: #fff;
     border: 1px solid #ccc;
     outline: none;
+    color: black;
 }
 
 form button:hover {
