--- a/css/style.css
+++ b/css/style.css
@@ -42,11 +42,7 @@ form button:hover {
     font-size: clamp(1.2rem, 2.5vw, 2rem);
 }
 
-@media (max-width: 370px) {
-    form {
-        grid-template-columns: repeat(4, 20%);
-    }
-}
+
 
 @media (max-width: 800px) {
     form {
@@ -57,13 +53,19 @@ form button:hover {
     }
 }
 
+@media (max-width: 380px) {
+    form {
+        grid-template-columns: repeat(4, 23%);
+    }
+}
+
 
 .output {
     grid-column: span 4;
     display: flex;
     flex-direction: column;
     border: 1px solid #ccc;
-    
+    border-radius: 0;
 }
 
 #equacao {
