mais alguns ajustes

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,11 @@ form button:hover {
     font-size: clamp(1.2rem, 2.5vw, 2rem);
 }
 
-
+@media (max-width: 1000px) {
+    form {
+        grid-template-columns: repeat(4, 12%);
+    }
+}
 
 @media (max-width: 800px) {
     form {
