--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    background: linear-gradient(to right, rgba(238,189,137,1) 0%, rgba(209,58,189,1) 100%);
+    background: linear-gradient(to right, #233329, #41b883 100%);
     margin: 0;
     padding: 0;
 }
@@ -29,17 +29,16 @@ form {
 form button {
     cursor: pointer;
     font-size: var(--font-xl);
-    background-color: #fff;
-    
-    border: 1px solid #ccc;
+    background-color: #111;
+    border: none;
     outline: none;
-    color: black;
+    color: #fff;
 }
 
 form button:hover {
-    background-color: rgba(255, 255, 255, 0.15);
+    background-color: #ccc;
     border: none;
-    color: #fff;
+    color: #111;
     font-size: clamp(1.2rem, 2.5vw, 2rem);
 }
 
@@ -64,12 +63,15 @@ form button:hover {
     }
 }
 
+.green {
+    background: #41b88375;
+}
 
 .output {
     grid-column: span 4;
     display: flex;
     flex-direction: column;
-    border: 1px solid #ccc;
+    border: none;
     border-radius: 0;
 }
 
@@ -79,21 +81,19 @@ form button:hover {
     text-align: right;
     border: none;
     padding: 0 10px;
-    background: #fff;
+    background: #222;
     font-size: var(--font-xl);
     outline: none;
     border-radius: 0;
-}
-
-#equacao:focus {
-    background-color: #fff;
+    color: #ccc;
 }
 
 .output p {
     border: none;
-    background-color: #fff;
+    background-color: #222;
     padding: 0 10px;
     font-size: var(--font-md);
+    color: #fff;
 }
 
 .span-two {
