--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    background: linear-gradient(to right, #233329, #41b883 100%);
+    background: linear-gradient(to left, #233329, #41b883 100%);
     margin: 0;
     padding: 0;
 }
